--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -4,6 +4,7 @@
 #+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
 #+PROPERTY: EffORT_ALL 0 0:15 0:30 1:00 2:00 4:00 8:00
+#+OPTIONS: tex:t
 
 
 * Inbox
@@ -59,7 +60,7 @@ SCHEDULED: <2021-05-10 Mon 09:00>
 :COOKIE_DATA: checkbox recursive
 :ORDERED: nil
 :END:
-- [X] 床上用品 [8/8]
+- [-] 床上用品 [7/8]
   - [X] 床褥 ::
   - [X] 被子 ::
   - [X] 被套 ::
@@ -67,8 +68,8 @@ SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 枕头 ::
   - [X] 床单 ::
   - [X] 毛毯 ::
-  - [X] 床刷 ::
-- [X] 洗涤用品 [21/21]
+  - [ ] 床刷 ::
+- [X] 洗涤用品 [23/23]
   - [X] 洗衣液 ::
   - [X] 洗衣盆 ::
   - [X] 消毒液 ::
@@ -90,14 +91,16 @@ SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 卫生纸 ::
   - [X] 毛巾 ::
   - [X] 抹布 ::
-- [-] 厨具 [6/7]
+  - [X] 澡巾三件套 ::
+  - [X] 马桶刷 :: 
+- [X] 厨具 [7/7]
   - [X] 垃圾袋 ::
   - [X] 垃圾桶 ::
   - [X] 水果刀 ::
   - [X] 电热水壶 ::
   - [X] 水杯 ::
   - [X] 剪刀 ::
-  - [ ] 果盘 ::
+  - [X] 果盘 ::
 - [-] 家具 [3/7]
   - [X] 床头灯 ::
   - [X] 挂钩 ::
@@ -185,7 +188,9 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 - Note taken on [2021-04-21 周三 15:58] \\
   单据在公司抽屉第二层
 <2021-05-12 周三>--<2021-06-15 周二>
-** TODO 西域胡杨新疆菜部门聚餐                                       :date:
+** DONE 西域胡杨新疆菜部门聚餐                                       :date:
+CLOSED: [2021-04-23 周五 23:16]
+- State "DONE"       from "TODO"       [2021-04-23 周五 23:16]
 <2021-04-23 周五 17:00-21:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
