--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -19,12 +19,21 @@ DEADLINE: <2021-05-12 周三 23:00 +1m> SCHEDULED: <2021-05-12 周三 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-04-25 周日 23:00 ++1w> SCHEDULED: <2021-04-24 周六 18:00 ++1w>
+DEADLINE: <2021-05-02 周日 23:00 ++1w> SCHEDULED: <2021-05-01 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-04-17 周六 23:21]
+:LAST_REPEAT: [2021-04-25 周日 20:54]
 :END:
+- State "DONE"       from "TODO"       [2021-04-25 周日 20:54] \\
+  1. 学习了客户端常用功能(Functor, io等)
+  2. 学习了调试工具的使用方法
+  3. 完成了大作业(结合了全面学到的很多知识, ui控件, mvsn, 观察者等等)
+  4. 完成了对Cocos2d摄像机渲染顺序的深入学习
+  5. 完成了在线更新的学习
+  ------------------------------------------------
+  1. 接种了第一针新冠疫苗
+  2. 和部门同事聚餐(新疆菜)
 - State "DONE"       from "TODO"       [2021-04-17 周六 23:21] \\
   1. 学习UI基础, 完成了UI大作业
   2. 学习UI制作经验分享
@@ -188,10 +197,6 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 - Note taken on [2021-04-21 周三 15:58] \\
   单据在公司抽屉第二层
 <2021-05-12 周三>--<2021-06-15 周二>
-** DONE 西域胡杨新疆菜部门聚餐                                       :date:
-CLOSED: [2021-04-23 周五 23:16]
-- State "DONE"       from "TODO"       [2021-04-23 周五 23:16]
-<2021-04-23 周五 17:00-21:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
@@ -208,8 +213,18 @@ CLOSED: [2021-04-13 周二 08:40] SCHEDULED: <2021-04-12 周一 23:00>
 :ARCHIVE_TIME: 2021-04-17 周六 23:41
 :END:
 - State "DONE"       from "TODO"       [2021-04-13 周二 08:40]
-** DONE 第一针aero新冠疫苗接种                                      :event:
+*** DONE 西域胡杨新疆菜部门聚餐                                      :date:
+CLOSED: [2021-04-23 周五 23:16]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-04-25 周日 22:40
+:END:
+- State "DONE"       from "TODO"       [2021-04-23 周五 23:16]
+<2021-04-23 周五 17:00-21:00>
+*** DONE 第一针aero新冠疫苗接种                                     :event:
 CLOSED: [2021-04-21 周三 16:06]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-04-25 周日 22:40
+:END:
 - State "DONE"       from "TODO"       [2021-04-21 周三 19:06]
 <2021-04-21 周三 13:30>
 * Project
