--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -12,21 +12,24 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-04-24 周六 18:00 ++1w> DEADLINE: <2021-04-26 周一 12:00 ++1w>
+SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-17 周六 23:29]
+:LAST_REPEAT: [2021-04-25 周日 21:56]
 :END:
+- State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
 - State "DONE"       from "TODO"       [2021-04-17 周六 23:29]
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-25 周日 19:00 ++1d> DEADLINE: <2021-04-25 周日 23:59 ++1d>
+SCHEDULED: <2021-04-26 周一 19:00 ++1d> DEADLINE: <2021-04-26 周一 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-24 周六 10:35]
+:LAST_REPEAT: [2021-04-25 周日 21:56]
 :END:
+
+- State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
 - State "CANCELED"   from "TODO"       [2021-04-24 周六 10:35] \\
   放假
 - State "DONE"       from "TODO"       [2021-04-23 周五 23:14]
@@ -94,13 +97,12 @@ SCHEDULED: <2021-04-26 周一 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#C] 学习 org-mode                                   :learn:ATTACH:
+** TODO [#C] 学习 org-mode                                   :learn:
 SCHEDULED: <2021-04-26 周一 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
 :LAST_REPEAT: [2021-04-24 周六 21:44]
-:ID:       6f5bc712-dafb-4bc3-87d1-6c308c2395c8
 :END:
 - State "DONE"       from "TODO"       [2021-04-24 周六 21:44]
 - State "DONE"       from "TODO"       [2021-04-24 周六 11:15]
@@ -125,6 +127,8 @@ SCHEDULED: <2021-04-26 周一 19:00 ++1d/2d>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
+** TODO [#A] 工作流相关系统                                         :learn:
+SCHEDULED: <2021-04-26 周一 09:00>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 学习org-edna                                          :learn:
 CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED: <2022-04-03 周日 21:00>
@@ -229,6 +233,25 @@ CLOSED: [2021-04-13 周二 10:21] DEADLINE: <2021-04-13 周二 11:35> SCHEDULED:
 :ARCHIVE_TIME: 2021-04-17 周六 23:41
 :END:
 - State "DONE"       from "TODO"       [2021-04-13 周二 10:21]
+*** DONE [#A] 在线更新                                              :learn:
+CLOSED: [2021-04-25 周日 19:21] SCHEDULED: <2021-04-25 周日 19:10>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-04-25 周日 21:59
+:END:
+- State "DONE"       from "TODO"       [2021-04-25 周日 19:21]
+:LOGBOOK:
+CLOCK: [2021-04-25 周日 19:11]--[2021-04-25 周日 19:21] =>  0:10
+:END:
+*** DONE [#A] Cocos2d摄像机渲染顺序                                 :learn:
+CLOSED: [2021-04-25 周日 20:21] SCHEDULED: <2021-04-25 周日 19:25>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-04-25 周日 21:59
+:END:
+- State "DONE"       from "TODO"       [2021-04-25 周日 20:21]
+:LOGBOOK:
+CLOCK: [2021-04-25 周日 19:55]--[2021-04-25 周日 20:20] =>  0:25
+CLOCK: [2021-04-25 周日 19:25]--[2021-04-25 周日 19:50] =>  0:25
+:END:
 * Appointment
 ** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
 DEADLINE: <2021-10-01 周五>
@@ -253,174 +276,17 @@ DEADLINE: <2021-10-01 周五>
 |   | earphone    |     0 |       |       |
 #+TBLFM: $3 = $4
 * Project
-** SCH 大作业                                                       :learn:
-DEADLINE: <2021-04-24 周六 21:00> SCHEDULED: <2021-04-19 周一 13:00>
+** SCH [#A] M8项目战斗逻辑模块梳理                                   :work:
+SCHEDULED: <2021-04-26 周一 10:30> DEADLINE: <2021-04-28 周三 21:00>
 :PROPERTIES:
 :BLOCKER: children
-:END:
-*** DONE 阅读代码规范                                              :ATTACH:
-CLOSED: [2021-04-19 周一 15:01] SCHEDULED: <2021-04-19 周一 11:30>
-:PROPERTIES:
+:END:                          
+*** TODO 总体浏览代码
+:PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:ID:       8d2f5874-274c-469c-94b2-b7deec102799
-:ATTACH: [[attachment:liwei_engine.org::*代码规范][代码规范]]
-:END:
-- State "DONE"       from "TODO"       [2021-04-19 周一 15:01]
-:LOGBOOK:
-CLOCK: [2021-04-19 周一 13:40]--[2021-04-19 周一 14:05] =>  0:25
-CLOCK: [2021-04-19 周一 13:10]--[2021-04-19 周一 13:35] =>  0:25
-:END:
-*** DONE 搭建环境
-CLOSED: [2021-04-19 周一 15:40] SCHEDULED: <2021-04-19 周一 15:01>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-19 周一 15:40]
-:LOGBOOK:
-CLOCK: [2021-04-19 周一 15:02]--[2021-04-19 周一 15:27] =>  0:25
-:END:
-*** DONE 阅读源码分析结构
-CLOSED: [2021-04-19 周一 15:58] SCHEDULED: <2021-04-19 周一 15:40>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-19 周一 15:58]
-:LOGBOOK:
-CLOCK: [2021-04-19 周一 15:30]--[2021-04-19 周一 15:55] =>  0:25
-:END:
-*** DONE 设计数据导表
-CLOSED: [2021-04-19 周一 17:15] SCHEDULED: <2021-04-19 周一 15:58>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-19 周一 17:15]
-:LOGBOOK:
-CLOCK: [2021-04-19 周一 17:01]--[2021-04-19 周一 17:15] =>  0:14
-CLOCK: [2021-04-19 周一 16:31]--[2021-04-19 周一 16:56] =>  0:25
-CLOCK: [2021-04-19 周一 16:01]--[2021-04-19 周一 16:26] =>  0:25
-:END:
-*** DONE 设计界面
-CLOSED: [2021-04-19 周一 22:01] SCHEDULED: <2021-04-19 周一 17:15>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-19 周一 22:01]
-- Note taken on [2021-04-19 周一 20:47] \\
-  按钮路径 Res/g3/newg3/hengfenye1.plist
-:LOGBOOK:
-CLOCK: [2021-04-19 周一 20:43]--[2021-04-19 周一 21:08] =>  0:25
-CLOCK: [2021-04-19 周一 20:13]--[2021-04-19 周一 20:38] =>  0:25
-CLOCK: [2021-04-19 周一 19:43]--[2021-04-19 周一 20:08] =>  0:25
-CLOCK: [2021-04-19 周一 19:13]--[2021-04-19 周一 19:38] =>  0:25
-:END:
-*** DONE 完成类设计
-CLOSED: [2021-04-20 周二 16:43] SCHEDULED: <2021-04-20 周二 10:00>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-20 周二 16:43]
-:LOGBOOK:
-CLOCK: [2021-04-20 周二 15:49]--[2021-04-20 周二 16:14] =>  0:25
-CLOCK: [2021-04-20 周二 15:19]--[2021-04-20 周二 15:44] =>  0:25
-CLOCK: [2021-04-20 周二 14:49]--[2021-04-20 周二 15:14] =>  0:25
-CLOCK: [2021-04-20 周二 14:14]--[2021-04-20 周二 14:39] =>  0:25
-CLOCK: [2021-04-20 周二 13:44]--[2021-04-20 周二 14:09] =>  0:25
-CLOCK: [2021-04-20 周二 13:14]--[2021-04-20 周二 13:39] =>  0:25
-CLOCK: [2021-04-20 周二 11:12]--[2021-04-20 周二 11:37] =>  0:25
-CLOCK: [2021-04-20 周二 10:42]--[2021-04-20 周二 11:07] =>  0:25
-CLOCK: [2021-04-20 周二 10:12]--[2021-04-20 周二 10:37] =>  0:25
-:END:
-*** DONE 设计交互协议
-CLOSED: [2021-04-20 周二 20:36] SCHEDULED: <2021-04-20 周二 16:43>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-20 周二 20:36]
-:LOGBOOK:
-CLOCK: [2021-04-20 周二 20:09]--[2021-04-20 周二 20:34] =>  0:25
-CLOCK: [2021-04-20 周二 19:39]--[2021-04-20 周二 20:04] =>  0:25
-CLOCK: [2021-04-20 周二 19:09]--[2021-04-20 周二 19:34] =>  0:25
-CLOCK: [2021-04-20 周二 17:25]--[2021-04-20 周二 17:50] =>  0:25
-CLOCK: [2021-04-20 周二 16:50]--[2021-04-20 周二 17:15] =>  0:25
-:END:
-*** DONE 实现服务端类框架
-CLOSED: [2021-04-21 周三 16:55] SCHEDULED: <2021-04-21 周三 09:36>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-21 周三 16:55]
-:LOGBOOK:
-CLOCK: [2021-04-21 周三 16:28]--[2021-04-21 周三 16:53] =>  0:25
-CLOCK: [2021-04-21 周三 15:58]--[2021-04-21 周三 16:23] =>  0:25
-CLOCK: [2021-04-21 周三 13:18]--[2021-04-21 周三 13:43] =>  0:25
-CLOCK: [2021-04-21 周三 11:13]--[2021-04-21 周三 11:38] =>  0:25
-CLOCK: [2021-04-21 周三 10:43]--[2021-04-21 周三 11:08] =>  0:25
-CLOCK: [2021-04-21 周三 10:13]--[2021-04-21 周三 10:38] =>  0:25
-CLOCK: [2021-04-21 周三 09:43]--[2021-04-21 周三 10:08] =>  0:25
-:END:
-*** DONE 完成交互协议
-CLOSED: [2021-04-21 周三 22:16] SCHEDULED: <2021-04-21 周三 16:58>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-21 周三 22:16]
-:LOGBOOK:
-CLOCK: [2021-04-21 周三 21:43]--[2021-04-21 周三 22:08] =>  0:25
-CLOCK: [2021-04-21 周三 21:13]--[2021-04-21 周三 21:38] =>  0:25
-CLOCK: [2021-04-21 周三 20:13]--[2021-04-21 周三 20:38] =>  0:25
-CLOCK: [2021-04-21 周三 19:38]--[2021-04-21 周三 20:03] =>  0:25
-CLOCK: [2021-04-21 周三 16:58]--[2021-04-21 周三 17:23] =>  0:25
-:END:
-*** DONE 实现模型层
-CLOSED: [2021-04-22 周四 20:05] SCHEDULED: <2021-04-22 周四 09:16>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-22 周四 20:05]
-:LOGBOOK:
-CLOCK: [2021-04-22 周四 19:26]--[2021-04-22 周四 19:51] =>  0:25
-CLOCK: [2021-04-22 周四 16:59]--[2021-04-22 周四 17:24] =>  0:25
-CLOCK: [2021-04-22 周四 16:29]--[2021-04-22 周四 16:54] =>  0:25
-CLOCK: [2021-04-22 周四 15:59]--[2021-04-22 周四 16:24] =>  0:25
-CLOCK: [2021-04-22 周四 15:24]--[2021-04-22 周四 15:49] =>  0:25
-CLOCK: [2021-04-22 周四 14:54]--[2021-04-22 周四 15:19] =>  0:25
-CLOCK: [2021-04-22 周四 14:24]--[2021-04-22 周四 14:49] =>  0:25
-CLOCK: [2021-04-22 周四 13:54]--[2021-04-22 周四 14:19] =>  0:25
-CLOCK: [2021-04-22 周四 13:19]--[2021-04-22 周四 13:44] =>  0:25
-CLOCK: [2021-04-22 周四 11:01]--[2021-04-22 周四 11:26] =>  0:25
-CLOCK: [2021-04-22 周四 10:31]--[2021-04-22 周四 10:56] =>  0:25
-CLOCK: [2021-04-22 周四 10:01]--[2021-04-22 周四 10:26] =>  0:25
-:END:
-*** DONE 实现视图层
-CLOSED: [2021-04-23 周五 23:13] SCHEDULED: <2021-04-23 周五 09:05>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-23 周五 23:13]
-:LOGBOOK:
-CLOCK: [2021-04-23 周五 17:12]--[2021-04-23 周五 17:37] =>  0:25
-CLOCK: [2021-04-23 周五 16:42]--[2021-04-23 周五 17:07] =>  0:25
-CLOCK: [2021-04-23 周五 16:07]--[2021-04-23 周五 16:32] =>  0:25
-CLOCK: [2021-04-23 周五 15:37]--[2021-04-23 周五 16:02] =>  0:25
-CLOCK: [2021-04-23 周五 15:07]--[2021-04-23 周五 15:32] =>  0:25
-CLOCK: [2021-04-23 周五 14:37]--[2021-04-23 周五 15:02] =>  0:25
-CLOCK: [2021-04-23 周五 14:02]--[2021-04-23 周五 14:27] =>  0:25
-CLOCK: [2021-04-23 周五 13:32]--[2021-04-23 周五 13:57] =>  0:25
-CLOCK: [2021-04-23 周五 13:02]--[2021-04-23 周五 13:27] =>  0:25
-CLOCK: [2021-04-23 周五 10:51]--[2021-04-23 周五 11:16] =>  0:25
-CLOCK: [2021-04-23 周五 10:21]--[2021-04-23 周五 10:46] =>  0:25
-CLOCK: [2021-04-23 周五 09:51]--[2021-04-23 周五 10:16] =>  0:25
-CLOCK: [2021-04-23 周五 09:21]--[2021-04-23 周五 09:46] =>  0:25
-CLOCK: [2021-04-22 周四 20:35]--[2021-04-22 周四 21:00] =>  0:25
-CLOCK: [2021-04-22 周四 20:05]--[2021-04-22 周四 20:30] =>  0:25
-:END:
-*** TODO 实现额外功能
-SCHEDULED: <2021-04-25 周日 9:00>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** WAIT 调试并完成
-:PROPERTIES:
+:END:                          
+*** WAIT 完成梳理
+:PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :END:
 ** ArChive                                                        :ARCHIVE:
@@ -854,34 +720,224 @@ CLOSED: [2021-04-13 周二 22:49]
 
 - State "DONE"       from "TODO"       [2021-04-13 周二 22:49] //
   好像有点问题, 缩放的比例有点不对劲, 先这样
-** DONE [#A] 学习调试工具                                           :learn:
+*** DONE 大作业                                                     :learn:
+CLOSED: [2021-04-25 周日 19:06] DEADLINE: <2021-04-24 周六 21:00> SCHEDULED: <2021-04-19 周一 13:00>
+:PROPERTIES:
+:BLOCKER: children
+:ARCHIVE_TIME: 2021-04-25 周日 21:59
+:END:
+- State "DONE"       from "SCH"        [2021-04-25 周日 19:06]
+**** DONE 阅读代码规范                                            :ATTACH:
+CLOSED: [2021-04-19 周一 15:01] SCHEDULED: <2021-04-19 周一 11:30>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:ID:       8d2f5874-274c-469c-94b2-b7deec102799
+:ATTACH: [[attachment:liwei_engine.org::*代码规范][代码规范]]
+:END:
+- State "DONE"       from "TODO"       [2021-04-19 周一 15:01]
+:LOGBOOK:
+CLOCK: [2021-04-19 周一 13:40]--[2021-04-19 周一 14:05] =>  0:25
+CLOCK: [2021-04-19 周一 13:10]--[2021-04-19 周一 13:35] =>  0:25
+:END:
+**** DONE 搭建环境
+CLOSED: [2021-04-19 周一 15:40] SCHEDULED: <2021-04-19 周一 15:01>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-19 周一 15:40]
+:LOGBOOK:
+CLOCK: [2021-04-19 周一 15:02]--[2021-04-19 周一 15:27] =>  0:25
+:END:
+**** DONE 阅读源码分析结构
+CLOSED: [2021-04-19 周一 15:58] SCHEDULED: <2021-04-19 周一 15:40>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-19 周一 15:58]
+:LOGBOOK:
+CLOCK: [2021-04-19 周一 15:30]--[2021-04-19 周一 15:55] =>  0:25
+:END:
+**** DONE 设计数据导表
+CLOSED: [2021-04-19 周一 17:15] SCHEDULED: <2021-04-19 周一 15:58>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-19 周一 17:15]
+:LOGBOOK:
+CLOCK: [2021-04-19 周一 17:01]--[2021-04-19 周一 17:15] =>  0:14
+CLOCK: [2021-04-19 周一 16:31]--[2021-04-19 周一 16:56] =>  0:25
+CLOCK: [2021-04-19 周一 16:01]--[2021-04-19 周一 16:26] =>  0:25
+:END:
+**** DONE 设计界面
+CLOSED: [2021-04-19 周一 22:01] SCHEDULED: <2021-04-19 周一 17:15>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-19 周一 22:01]
+- Note taken on [2021-04-19 周一 20:47] \\
+  按钮路径 Res/g3/newg3/hengfenye1.plist
+:LOGBOOK:
+CLOCK: [2021-04-19 周一 20:43]--[2021-04-19 周一 21:08] =>  0:25
+CLOCK: [2021-04-19 周一 20:13]--[2021-04-19 周一 20:38] =>  0:25
+CLOCK: [2021-04-19 周一 19:43]--[2021-04-19 周一 20:08] =>  0:25
+CLOCK: [2021-04-19 周一 19:13]--[2021-04-19 周一 19:38] =>  0:25
+:END:
+**** DONE 完成类设计
+CLOSED: [2021-04-20 周二 16:43] SCHEDULED: <2021-04-20 周二 10:00>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 16:43]
+:LOGBOOK:
+CLOCK: [2021-04-20 周二 15:49]--[2021-04-20 周二 16:14] =>  0:25
+CLOCK: [2021-04-20 周二 15:19]--[2021-04-20 周二 15:44] =>  0:25
+CLOCK: [2021-04-20 周二 14:49]--[2021-04-20 周二 15:14] =>  0:25
+CLOCK: [2021-04-20 周二 14:14]--[2021-04-20 周二 14:39] =>  0:25
+CLOCK: [2021-04-20 周二 13:44]--[2021-04-20 周二 14:09] =>  0:25
+CLOCK: [2021-04-20 周二 13:14]--[2021-04-20 周二 13:39] =>  0:25
+CLOCK: [2021-04-20 周二 11:12]--[2021-04-20 周二 11:37] =>  0:25
+CLOCK: [2021-04-20 周二 10:42]--[2021-04-20 周二 11:07] =>  0:25
+CLOCK: [2021-04-20 周二 10:12]--[2021-04-20 周二 10:37] =>  0:25
+:END:
+**** DONE 设计交互协议
+CLOSED: [2021-04-20 周二 20:36] SCHEDULED: <2021-04-20 周二 16:43>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 20:36]
+:LOGBOOK:
+CLOCK: [2021-04-20 周二 20:09]--[2021-04-20 周二 20:34] =>  0:25
+CLOCK: [2021-04-20 周二 19:39]--[2021-04-20 周二 20:04] =>  0:25
+CLOCK: [2021-04-20 周二 19:09]--[2021-04-20 周二 19:34] =>  0:25
+CLOCK: [2021-04-20 周二 17:25]--[2021-04-20 周二 17:50] =>  0:25
+CLOCK: [2021-04-20 周二 16:50]--[2021-04-20 周二 17:15] =>  0:25
+:END:
+**** DONE 实现服务端类框架
+CLOSED: [2021-04-21 周三 16:55] SCHEDULED: <2021-04-21 周三 09:36>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 16:55]
+:LOGBOOK:
+CLOCK: [2021-04-21 周三 16:28]--[2021-04-21 周三 16:53] =>  0:25
+CLOCK: [2021-04-21 周三 15:58]--[2021-04-21 周三 16:23] =>  0:25
+CLOCK: [2021-04-21 周三 13:18]--[2021-04-21 周三 13:43] =>  0:25
+CLOCK: [2021-04-21 周三 11:13]--[2021-04-21 周三 11:38] =>  0:25
+CLOCK: [2021-04-21 周三 10:43]--[2021-04-21 周三 11:08] =>  0:25
+CLOCK: [2021-04-21 周三 10:13]--[2021-04-21 周三 10:38] =>  0:25
+CLOCK: [2021-04-21 周三 09:43]--[2021-04-21 周三 10:08] =>  0:25
+:END:
+**** DONE 完成交互协议
+CLOSED: [2021-04-21 周三 22:16] SCHEDULED: <2021-04-21 周三 16:58>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 22:16]
+:LOGBOOK:
+CLOCK: [2021-04-21 周三 21:43]--[2021-04-21 周三 22:08] =>  0:25
+CLOCK: [2021-04-21 周三 21:13]--[2021-04-21 周三 21:38] =>  0:25
+CLOCK: [2021-04-21 周三 20:13]--[2021-04-21 周三 20:38] =>  0:25
+CLOCK: [2021-04-21 周三 19:38]--[2021-04-21 周三 20:03] =>  0:25
+CLOCK: [2021-04-21 周三 16:58]--[2021-04-21 周三 17:23] =>  0:25
+:END:
+**** DONE 实现模型层
+CLOSED: [2021-04-22 周四 20:05] SCHEDULED: <2021-04-22 周四 09:16>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-22 周四 20:05]
+:LOGBOOK:
+CLOCK: [2021-04-22 周四 19:26]--[2021-04-22 周四 19:51] =>  0:25
+CLOCK: [2021-04-22 周四 16:59]--[2021-04-22 周四 17:24] =>  0:25
+CLOCK: [2021-04-22 周四 16:29]--[2021-04-22 周四 16:54] =>  0:25
+CLOCK: [2021-04-22 周四 15:59]--[2021-04-22 周四 16:24] =>  0:25
+CLOCK: [2021-04-22 周四 15:24]--[2021-04-22 周四 15:49] =>  0:25
+CLOCK: [2021-04-22 周四 14:54]--[2021-04-22 周四 15:19] =>  0:25
+CLOCK: [2021-04-22 周四 14:24]--[2021-04-22 周四 14:49] =>  0:25
+CLOCK: [2021-04-22 周四 13:54]--[2021-04-22 周四 14:19] =>  0:25
+CLOCK: [2021-04-22 周四 13:19]--[2021-04-22 周四 13:44] =>  0:25
+CLOCK: [2021-04-22 周四 11:01]--[2021-04-22 周四 11:26] =>  0:25
+CLOCK: [2021-04-22 周四 10:31]--[2021-04-22 周四 10:56] =>  0:25
+CLOCK: [2021-04-22 周四 10:01]--[2021-04-22 周四 10:26] =>  0:25
+:END:
+**** DONE 实现视图层
+CLOSED: [2021-04-23 周五 23:13] SCHEDULED: <2021-04-23 周五 09:05>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-23 周五 23:13]
+:LOGBOOK:
+CLOCK: [2021-04-23 周五 17:12]--[2021-04-23 周五 17:37] =>  0:25
+CLOCK: [2021-04-23 周五 16:42]--[2021-04-23 周五 17:07] =>  0:25
+CLOCK: [2021-04-23 周五 16:07]--[2021-04-23 周五 16:32] =>  0:25
+CLOCK: [2021-04-23 周五 15:37]--[2021-04-23 周五 16:02] =>  0:25
+CLOCK: [2021-04-23 周五 15:07]--[2021-04-23 周五 15:32] =>  0:25
+CLOCK: [2021-04-23 周五 14:37]--[2021-04-23 周五 15:02] =>  0:25
+CLOCK: [2021-04-23 周五 14:02]--[2021-04-23 周五 14:27] =>  0:25
+CLOCK: [2021-04-23 周五 13:32]--[2021-04-23 周五 13:57] =>  0:25
+CLOCK: [2021-04-23 周五 13:02]--[2021-04-23 周五 13:27] =>  0:25
+CLOCK: [2021-04-23 周五 10:51]--[2021-04-23 周五 11:16] =>  0:25
+CLOCK: [2021-04-23 周五 10:21]--[2021-04-23 周五 10:46] =>  0:25
+CLOCK: [2021-04-23 周五 09:51]--[2021-04-23 周五 10:16] =>  0:25
+CLOCK: [2021-04-23 周五 09:21]--[2021-04-23 周五 09:46] =>  0:25
+CLOCK: [2021-04-22 周四 20:35]--[2021-04-22 周四 21:00] =>  0:25
+CLOCK: [2021-04-22 周四 20:05]--[2021-04-22 周四 20:30] =>  0:25
+:END:
+**** DONE 实现额外功能
+CLOSED: [2021-04-25 周日 16:06] SCHEDULED: <2021-04-25 周日 9:00>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-25 周日 16:06]
+:LOGBOOK:
+CLOCK: [2021-04-25 周日 15:39]--[2021-04-25 周日 16:05] =>  0:26
+CLOCK: [2021-04-25 周日 15:09]--[2021-04-25 周日 15:34] =>  0:25
+CLOCK: [2021-04-25 周日 14:39]--[2021-04-25 周日 15:04] =>  0:25
+CLOCK: [2021-04-25 周日 14:04]--[2021-04-25 周日 14:29] =>  0:25
+CLOCK: [2021-04-25 周日 13:34]--[2021-04-25 周日 13:59] =>  0:25
+CLOCK: [2021-04-25 周日 13:04]--[2021-04-25 周日 13:29] =>  0:25
+CLOCK: [2021-04-25 周日 11:22]--[2021-04-25 周日 11:47] =>  0:25
+CLOCK: [2021-04-25 周日 10:47]--[2021-04-25 周日 11:12] =>  0:25
+CLOCK: [2021-04-25 周日 10:17]--[2021-04-25 周日 10:42] =>  0:25
+CLOCK: [2021-04-25 周日 09:47]--[2021-04-25 周日 10:12] =>  0:25
+CLOCK: [2021-04-25 周日 09:17]--[2021-04-25 周日 09:42] =>  0:25
+:END:
+**** DONE 调试并完成
+CLOSED: [2021-04-25 周日 19:06] SCHEDULED: <2021-04-25 周日 16:06>
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE [#A] 学习调试工具                                          :learn:
 CLOSED: [2021-04-19 周一 11:24] SCHEDULED: <2021-04-19 周一 11:10> DEADLINE: <2021-04-19 周一 21:00>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2021-04-25 周日 21:59
 :END:
 - State "DONE"       from "SCH"        [2021-04-19 周一 11:24]
 :LOGBOOK:
 CLOCK: [2021-04-19 周一 11:13]--[2021-04-19 周一 11:25] =>  0:12
 :END:
-*** DONE 真机调试
+**** DONE 真机调试
 CLOSED: [2021-04-19 周一 11:17] SCHEDULED: <2021-04-19 周一 11:10>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-04-19 周一 11:17]
-*** DONE 性能profile
+**** DONE 性能profile
 CLOSED: [2021-04-19 周一 11:24] SCHEDULED: <2021-04-19 周一 11:17>
 :PROPERTIES:
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-** DONE 客户端常用功能                                              :learn:
+*** DONE 客户端常用功能                                             :learn:
 CLOSED: [2021-04-19 周一 10:56] DEADLINE: <2021-04-19 周一 21:00> SCHEDULED: <2021-04-16 周五 17:10>
 :PROPERTIES:
 :EFFORT: 4:00
+:ARCHIVE_TIME: 2021-04-25 周日 21:59
 :END:
 - State "DONE"       from "SCH"        [2021-04-19 周一 10:56]
-*** DONE 文本链接功能
+**** DONE 文本链接功能
 CLOSED: [2021-04-16 周五 17:36] SCHEDULED: <2021-04-16 周五 17:10>
 :PROPERTIES:
 :TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -890,7 +946,7 @@ CLOSED: [2021-04-16 周五 17:36] SCHEDULED: <2021-04-16 周五 17:10>
 :LOGBOOK:
 CLOCK: [2021-04-16 周五 17:11]--[2021-04-16 周五 17:36] =>  0:25
 :END:
-*** DONE 导表工具
+**** DONE 导表工具
 CLOSED: [2021-04-17 周六 23:18] SCHEDULED: <2021-04-18 周日 17:36>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -901,7 +957,7 @@ CLOCK: [2021-04-17 周六 23:12]--[2021-04-17 周六 23:18] =>  0:06
 CLOCK: [2021-04-17 周六 22:42]--[2021-04-17 周六 23:07] =>  0:25
 CLOCK: [2021-04-17 周六 22:12]--[2021-04-17 周六 22:37] =>  0:25
 :END:
-*** DONE 常用工具 [2/2]
+**** DONE 常用工具 [2/2]
 CLOSED: [2021-04-19 周一 10:56] SCHEDULED: <2021-04-19 周一 10:00>
 :PROPERTIES:
 :TRIGGER+: parent todo!(DONE)
@@ -912,6 +968,11 @@ CLOCK: [2021-04-19 周一 10:30]--[2021-04-19 周一 10:55] =>  0:25
 :END:
 - [X] 循环引用和Functor
 - [X] 引擎IO和文件IO
+:LOGBOOK:
+CLOCK: [2021-04-25 周日 17:05]--[2021-04-25 周日 17:30] =>  0:25
+CLOCK: [2021-04-25 周日 16:35]--[2021-04-25 周日 17:00] =>  0:25
+CLOCK: [2021-04-25 周日 16:10]--[2021-04-25 周日 16:35] =>  0:25
+:END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
@@ -919,4 +980,4 @@ CLOCK: [2021-04-19 周一 10:30]--[2021-04-19 周一 10:55] =>  0:25
 
 * Footnotes
 
-[fn:1] 狂潮太可怕了, 我服了
+[fn:1] 矿潮太可怕了, 我服了
