--- a/src/org/note/algo_note.org
+++ b/src/org/note/algo_note.org
@@ -1,6 +1,7 @@
 #+STARTUP: OVERVIEW
 #+TAGS: 位操作(b) 递归(r) 动态规划(d) 贪心(e) 排序(o) 深度优先搜索(l) 广度优先搜索(f) 启发式(i) 指针(p) 二分(k) 分治(c) 概率(n)
 #+TAGS: 并查集(u) 栈(s) 图(g) 数学(m) 序列(a) 堆(h) 队列(q) 树(t) 数据结构(z) 其他(x)
+#+OPTIONS: toc:2
 
 * 伪代码标记说明
 ** 记号
