--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -26,12 +26,13 @@ SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-27 周二 19:00 ++1d> DEADLINE: <2021-04-27 周二 23:59 ++1d>
+SCHEDULED: <2021-04-28 周三 19:00 ++1d> DEADLINE: <2021-04-28 周三 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-26 周一 23:07]
+:LAST_REPEAT: [2021-04-27 周二 21:45]
 :END:
 
+- State "DONE"       from "TODO"       [2021-04-27 周二 21:45]
 - State "DONE"       from "TODO"       [2021-04-26 周一 23:07]
 - State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
 - State "CANCELED"   from "TODO"       [2021-04-24 周六 10:35] \\
@@ -65,13 +66,14 @@ SCHEDULED: <2021-04-27 周二 19:00 ++1d> DEADLINE: <2021-04-27 周二 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-27 周二 19:00 ++1d>
+SCHEDULED: <2021-04-28 周三 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-26 周一 23:07]
+:LAST_REPEAT: [2021-04-27 周二 23:44]
 :END:
+- State "DONE"       from "TODO"       [2021-04-27 周二 23:44]
 - State "DONE"       from "TODO"       [2021-04-26 周一 23:07]
 - State "DONE"       from "TODO"       [2021-04-24 周六 21:44]
 - State "DONE"       from "TODO"       [2021-04-24 周六 10:42]
@@ -103,12 +105,13 @@ SCHEDULED: <2021-04-27 周二 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-27 周二 19:00 ++1d/2d>
+SCHEDULED: <2021-04-28 周三 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-26 周一 12:03]
+:LAST_REPEAT: [2021-04-27 周二 09:27]
 :END:
+- State "DONE"       from "TODO"       [2021-04-27 周二 09:27]
 - State "DONE"       from "TODO"       [2021-04-26 周一 12:03]
 - State "DONE"       from "TODO"       [2021-04-24 周六 21:44]
 - State "DONE"       from "TODO"       [2021-04-24 周六 11:15]
@@ -302,12 +305,28 @@ CLOCK: [2021-04-26 周一 20:32]--[2021-04-26 周一 20:40] =>  0:08
 CLOCK: [2021-04-26 周一 20:02]--[2021-04-26 周一 20:27] =>  0:25
 CLOCK: [2021-04-26 周一 19:32]--[2021-04-26 周一 19:57] =>  0:25
 :END:
-*** TODO 梳理整体代码
-SCHEDULED: <2021-04-26 周一 20:40>
+*** DONE 梳理整体代码
+CLOSED: [2021-04-27 周二 19:31] SCHEDULED: <2021-04-27 周二 9:40>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT 阅读战斗逻辑代码
+- State "DONE"       from "TODO"       [2021-04-27 周二 19:31]
+:LOGBOOK:
+CLOCK: [2021-04-27 周二 19:26]--[2021-04-27 周二 19:31] =>  0:05
+CLOCK: [2021-04-27 周二 17:21]--[2021-04-27 周二 17:46] =>  0:25
+CLOCK: [2021-04-27 周二 16:51]--[2021-04-27 周二 17:16] =>  0:25
+CLOCK: [2021-04-27 周二 16:21]--[2021-04-27 周二 16:46] =>  0:25
+:END:
+*** TODO 阅读战斗逻辑代码
+SCHEDULED: <2021-04-27 周二 19:31>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-27 周二 20:36]--[2021-04-27 周二 21:01] =>  0:25
+CLOCK: [2021-04-27 周二 20:01]--[2021-04-27 周二 20:26] =>  0:25
+CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
+:END:
 *** WAIT 整理逻辑
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
@@ -1078,6 +1097,7 @@ CLOCK: [2021-04-25 周日 16:10]--[2021-04-25 周日 16:35] =>  0:25
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
 ** 学习 elisp                                                :learn:future:
+{{{author}}}
 
 * Footnotes
 
