--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -21,13 +21,21 @@ DEADLINE: <2021-05-12 周三 23:00 +1m> SCHEDULED: <2021-05-12 周三 09:00 +1m>
   1. 每个月通过大壮名城物业缴纳电费, 水+物业费. 今天水+物业费有103元的残余, 和房东约定这个月我来缴, 明年的4月份房东来缴纳.
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-05-02 周日 23:00 ++1w> SCHEDULED: <2021-05-01 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2021-05-09 Sun 23:00 ++1w> SCHEDULED: <2021-05-08 Sat 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-04-25 周日 20:54]
+:LAST_REPEAT: [2021-05-02 Sun 23:07]
 :END:
+- State "DONE"       from "TODO"       [2021-05-02 Sun 23:07] \\
+  1. 简单学习了PMGO系统的用法
+  2. 完成了神武手游客户端教程的问题总结
+  3. 系统的学习了m8项目的逻辑层代码和部分战斗代码
+  4. 学习了导表工具的基本用法并完成了英雄山导表的制作
+  5. 完成了英雄山界面和模型的设计与实现
+  ------------------------------------------------
+  1. 让妈妈把游戏配件和书籍邮寄过来
 - State "DONE"       from "TODO"       [2021-04-25 周日 20:54] \\
   1. 学习了客户端常用功能(Functor, io等)
   2. 学习了调试工具的使用方法
@@ -211,7 +219,7 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 * Appointment
 ** TODO 第二针aero新冠疫苗接种                                      :event:
 - Note taken on [2021-04-21 周三 15:58] \\
-  单据在公司抽屉第二层
+  必须携带单据打第二针, 单据在公司抽屉第二层
 <2021-05-12 周三>--<2021-06-15 周二>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
