--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -60,11 +60,18 @@ DEADLINE: <2021-05-02 周日 23:00 ++1w> SCHEDULED: <2021-05-01 周六 18:00 ++1
   ------------------------------------------------
   5. 自行车从家里邮过来之后组好, 送到车店保养.
 ** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-04-30 周五 23:00 ++1m> SCHEDULED: <2021-04-30 周五 09:00 ++1m>
+DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
+:LAST_REPEAT: [2021-04-30 周五 23:01]
 :END:
+- State "DONE"       from "TODO"       [2021-04-30 周五 23:01] \\
+  入职之后的第一个月, 生活和工作逐渐回到了正轨, 主要完成了以下几个主要事情:
+  1. 学会了使用org-mode进行gtd管理
+  2. 完成了多益的入职培训
+  3. 找到了一处还不错的房子
+  4. 认识了很多很棒的同事
 ** WAIT [#B] 购买家具用品 [83%]                                  :shopping:
 SCHEDULED: <2021-05-10 Mon 09:00>
 :PROPERTIES:
@@ -154,46 +161,6 @@ SCHEDULED: <2022-04-03 周日 09:00>
 - [X] 红轴游戏键盘
 - [ ] 茶轴打字键盘
 - [ ] ps2转usb接口
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 理发                                                  :event:
-CLOSED: [2021-04-11 周日 16:26] SCHEDULED: <2021-04-10 周六 12:00> DEADLINE: <2021-04-11 周日 23:59>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-- State "DONE"       from "TODO"       [2021-04-11 周日 16:26]
-*** DONE [#A] 联系物业修马桶                                        :event:
-CLOSED: [2021-04-10 周六 18:28] DEADLINE: <2021-04-10 周六 19:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-- Note taken on [2021-04-11 周日 16:30] \\
-  50 房东付款
-- State "DONE"       from "TODO"       [2021-04-10 周六 18:28]
-*** DONE [#C] 退柯木塱的房子 [2/2]                                  :event:
-CLOSED: [2021-04-11 周日 16:21] DEADLINE: <2021-04-11 Sun 12:00>
-:PROPERTIES:
-:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
-:ORDERED: t
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-- Note taken on [2021-04-11 周日 16:21] \\
-  实际上还扣了300短租费和300除菌化粪费, 最后到手1300, 好坑.
-- State "DONE"       from "TODO"       [2021-04-11 周日 16:21]
-1. [X] 打扫卫生
-2. [X] 退还房卡, 取得押金(2*900[押金]+100[房卡]=1900)
-*** DONE [#A] 换锁芯                                                :event:
-CLOSED: [2021-04-11 周日 16:22] DEADLINE: <2021-04-11 周日 21:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-- Note taken on [2021-04-11 周日 16:22] \\
-  100元找物业弄得, 懒得在京东上找合适的了.
-- State "DONE"       from "TODO"       [2021-04-11 周日 16:22]
-*** DONE [#C] 给缺少硅胶保护的眼睛腿加套                         :shopping:
-CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2021-04-05 Mon 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
 * Appointment
 ** TODO 第二针aero新冠疫苗接种                                      :event:
 - Note taken on [2021-04-21 周三 15:58] \\
@@ -202,91 +169,6 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** Archive                                                        :ARCHIVE:
-*** DONE [#C] 组装自行车                                            :event:
-CLOSED: [2021-04-03 周六 12:00]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-04 周日 21:20
-:END:
-<2021-04-03 Sat 10:00>
-*** DONE [#C] 大扫除                                                :event:
-CLOSED: [2021-04-13 周二 08:40] SCHEDULED: <2021-04-12 周一 23:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-17 周六 23:41
-:END:
-- State "DONE"       from "TODO"       [2021-04-13 周二 08:40]
-*** DONE 西域胡杨新疆菜部门聚餐                                      :date:
-CLOSED: [2021-04-23 周五 23:16]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-25 周日 22:40
-:END:
-- State "DONE"       from "TODO"       [2021-04-23 周五 23:16]
-<2021-04-23 周五 17:00-21:00>
-*** DONE 第一针aero新冠疫苗接种                                     :event:
-CLOSED: [2021-04-21 周三 16:06]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-25 周日 22:40
-:END:
-- State "DONE"       from "TODO"       [2021-04-21 周三 19:06]
-<2021-04-21 周三 13:30>
 * Project
-** Archive                                                        :ARCHIVE:
-*** DONE [#C] 自行车维护 [100%]                                     :event:
-CLOSED: [2021-04-05 Mon 22:06] DEADLINE: <2021-04-05 周一 23:59> SCHEDULED: <2021-04-03 周六 12:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-**** DONE 买自行车水杯                                          :shopping:
-CLOSED: [2021-04-04 Sun 00:07] DEADLINE: <2021-04-03 周六 23:59>
-- Note taken on [2021-04-08 周四 09:05] \\
-  下班的时候骑共享单车回家, 放到共享单车上忘了拿走了, 已丢失.
-**** DONE 领取保养好的自行车
-: [2021-04-05 Mon 22:05] DEADLINE: <2021-04-05 Mon 22:00>
-:PROPERTIES:
-:DEPENDENCE: 捷安特火炉山店老板通知
-:END:
-**** CANCELED 额外配一把钥匙
-CLOSED: [2021-04-11 周日 19:42] DEADLINE: <2021-04-05 Mon 22:00>
-- State "CANCELED"   from "TODO"       [2021-04-05 周一 22:05] \\
-  无法配钥匙, 另外另一把在钱包里找到了, 也不需要配了
-*** DONE [#A] 找离公司近的新房子                                    :event:
-CLOSED: [2021-04-10 周六 13:20] SCHEDULED: <2021-04-06 周二 21:00> DEADLINE: <2021-04-25 周日>
-:PROPERTIES:
-:PRICE: 2000以内
-:DISTANCE: 离公司10公里以内, 离地铁站2公里以内
-:BLOCKER: children
-:TRIGGER:  olp("live.org" "Next Action/从家里把需要的物品邮寄过来") todo!(TODO) scheduled!("++0h")
-:TRIGGER+: olp("live.org" "Next Action/购买家具用品") todo!(TODO) scheduled!("++0h")
-:TRIGGER+: olp("live.org" "Next Action/办理电信宽带业务") todo!(TODO) scheduled!("++0h")
-:ARCHIVE_TIME: 2021-04-11 周日 21:43
-:END:
-- State "DONE"       from "SCH"        [2021-04-10 周六 13:20]
-**** DONE app上看房
-CLOSED: [2021-04-05 Mon 09:05] DEADLINE: <2021-04-11 周日 21:00>
-:PROPERTIES:
-:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
-:END:
-**** DONE 联系中介或房主看房
-CLOSED: [2021-04-05 周一 13:02] SCHEDULED: <2021-04-05 Mon 09:05> DEADLINE: <2021-04-18 周日 21:00>
-:PROPERTIES:
-:BLOCKER: previous-sibling
-:TRIGGER:  next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
-:END:
-- Note taken on [2021-04-05 周一 13:04] \\
-  位置: 黄浦区大壮国际g1-1018房. 阳面有阳台, 离万达和地铁不超过500m, 离公司7公里
-  价格: 2000元每月
-  面积: 29m²
-  设施: 冰箱, 洗衣机, 空调, 独卫, 电磁炉, 衣柜, 床
-  押金: 2个月房租
-  要求: 不能养宠物
-**** DONE 联系搬家公司搬家
-CLOSED: [2021-04-10 周六 13:20] SCHEDULED: <2021-04-10 周六 12:00> DEADLINE: <2021-04-25 Sun 21:00>
-:PROPERTIES:
-:BLOCKER: previous-sibling
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
-:END:
-- Note taken on [2021-04-07 Wed 23:51] \\
-  周6上午搬, 用货拉拉, 8公里50元左右.
 * Someday
 ** 买小风扇                                               :shopping:future:
