--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -11,7 +11,6 @@
 #+CATEGORY: work
 #+OPTIONS: tex:t
 
-
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
@@ -26,12 +25,14 @@ SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-05-07 周五 19:00 ++1d> DEADLINE: <2021-05-07 周五 23:59 ++1d>
+SCHEDULED: <2021-05-09 周日 19:00 ++1d> DEADLINE: <2021-05-09 周日 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-06 周四 22:59]
+:LAST_REPEAT: [2021-05-08 周六 23:53]
 :END:
 
+- State "DONE"       from "TODO"       [2021-05-08 周六 23:53]
+- State "DONE"       from "TODO"       [2021-05-07 周五 23:20]
 - State "DONE"       from "TODO"       [2021-05-06 周四 22:59]
 - State "CANCELED"   from "TODO"       [2021-05-05 Wed 21:04] \\
   51假期
@@ -80,13 +81,15 @@ SCHEDULED: <2021-05-07 周五 19:00 ++1d> DEADLINE: <2021-05-07 周五 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-05-07 周五 19:00 ++1d>
+SCHEDULED: <2021-05-09 周日 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-06 周四 23:04]
+:LAST_REPEAT: [2021-05-08 周六 09:30]
 :END:
+- State "DONE"       from "TODO"       [2021-05-08 周六 09:30]
+- State "DONE"       from "TODO"       [2021-05-07 周五 09:18]
 - State "DONE"       from "TODO"       [2021-05-06 周四 23:04]
 - State "DONE"       from "TODO"       [2021-05-05 周三 09:12]
 - State "DONE"       from "TODO"       [2021-05-04 周二 09:20]
@@ -166,6 +169,32 @@ CLOSED: [2021-05-06 周四 08:46] SCHEDULED: <2021-05-06 周四 19:00>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
+** DONE [#A] 完善英雄山代码                                          :work:
+CLOSED: [2021-05-08 周六 22:36] SCHEDULED: <2021-05-08 周六 09:40>
+- State "DONE"       from "TODO"       [2021-05-08 周六 22:36]
+:LOGBOOK:
+CLOCK: [2021-05-08 周六 23:27]--[2021-05-08 周六 23:52] =>  0:25
+CLOCK: [2021-05-08 周六 22:52]--[2021-05-08 周六 23:17] =>  0:25
+CLOCK: [2021-05-08 周六 11:03]--[2021-05-08 周六 11:28] =>  0:25
+CLOCK: [2021-05-08 周六 10:33]--[2021-05-08 周六 10:58] =>  0:25
+CLOCK: [2021-05-08 周六 10:03]--[2021-05-08 周六 10:28] =>  0:25
+CLOCK: [2021-05-08 周六 09:33]--[2021-05-08 周六 09:58] =>  0:25
+:END:
+** TODO [#A] 解决导表编辑器生成bug                                  :learn:
+Scheduled: <2021-05-08 周六 19:00>
+:LOGBOOK:
+CLOCK: [2021-05-08 周六 22:22]--[2021-05-08 周六 22:47] =>  0:25
+CLOCK: [2021-05-08 周六 21:52]--[2021-05-08 周六 22:17] =>  0:25
+CLOCK: [2021-05-08 周六 21:22]--[2021-05-08 周六 21:47] =>  0:25
+CLOCK: [2021-05-08 周六 20:47]--[2021-05-08 周六 21:12] =>  0:25
+CLOCK: [2021-05-08 周六 20:17]--[2021-05-08 周六 20:42] =>  0:25
+CLOCK: [2021-05-08 周六 19:47]--[2021-05-08 周六 20:12] =>  0:25
+CLOCK: [2021-05-08 周六 19:17]--[2021-05-08 周六 19:42] =>  0:25
+CLOCK: [2021-05-08 周六 18:42]--[2021-05-08 周六 19:07] =>  0:25
+CLOCK: [2021-05-08 周六 18:12]--[2021-05-08 周六 18:37] =>  0:25
+CLOCK: [2021-05-08 周六 17:42]--[2021-05-08 周六 18:07] =>  0:25
+CLOCK: [2021-05-08 周六 17:12]--[2021-05-08 周六 17:37] =>  0:25
+:END:
 * Appointment
 ** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
 DEADLINE: <2021-10-01 周五>
@@ -244,24 +273,29 @@ CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :END:
-** SCH [#A] 英雄山关卡界面                                           :work:
-SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-08 周六 21:00>
+** DONE [#A] 英雄山关卡界面                                          :work:
+CLOSED: [2021-05-07 周五 21:07] SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-08 周六 21:00>
 :PROPERTIES:
 :BLOCKER: children
 :END:                          
+- State "DONE"       from "SCH"        [2021-05-07 周五 21:07]
 *** DONE 挂机界面优化调整
 CLOSED: [2021-04-30 周五 14:12] SCHEDULED: <2021-04-29 周四 15:30>
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
 - State "DONE"       from "TODO"       [2021-04-30 周五 14:12]
-*** TODO 英雄山关卡场景制作
-DEADLINE: <2021-05-08 周六 21:00> SCHEDULED: <2021-04-30 周五 14:12>
+*** DONE 英雄山关卡场景制作
+CLOSED: [2021-05-07 周五 21:07] DEADLINE: <2021-05-08 周六 21:00> SCHEDULED: <2021-04-30 周五 14:12>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 :LOGBOOK:
+CLOCK: [2021-05-07 周五 10:49]--[2021-05-07 周五 11:14] =>  0:25
+CLOCK: [2021-05-07 周五 10:19]--[2021-05-07 周五 10:44] =>  0:25
+CLOCK: [2021-05-07 周五 09:49]--[2021-05-07 周五 10:14] =>  0:25
+CLOCK: [2021-05-07 周五 09:19]--[2021-05-07 周五 09:44] =>  0:25
 CLOCK: [2021-05-06 周四 21:15]--[2021-05-06 周四 21:40] =>  0:25
 CLOCK: [2021-05-06 周四 20:40]--[2021-05-06 周四 21:05] =>  0:25
 CLOCK: [2021-05-06 周四 20:10]--[2021-05-06 周四 20:35] =>  0:25
@@ -304,7 +338,10 @@ CLOCK: [2021-04-29 周四 15:05]--[2021-04-29 周四 15:30] =>  0:25
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
 ** 学习 elisp                                                :learn:future:
-{{{author}}}
+** 学习《游戏编程模式》                                      :learn:future:
+** 温习《流畅的python》                                      :learn:future:
+** 练习字帖                                                  :learn:future:
+** 学习英语                                                  :learn:future:
 
 * Footnotes
 
